--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     width: 100vw;
     overflow-x: hidden;
     font-family: 'Freight big pro';
-    background: #a0a0a0;
+    background: #fff;
     font-weight: 100;
 }
 
