--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     font-family: 'Freight big pro';
     background: #fff;
     font-weight: 100;
+    /* height: min; */
 }
 
 /* .marquee {
